--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "3D reconstruction analysis of MPSE algorithm."
 authors = ["Rahat Zaman <rahatzamancse@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "3.9"
+python = ">=3.8,<=3.9.9"
 opencv-python = "^4.5.4"
 numpy = "^1.21.4"
 tqdm = "^4.62.3"
@@ -23,6 +23,11 @@ scipy = "^1.7.3"
 scikit-learn = "^1.0.1"
 tensorflow = "^2.7.0"
 networkx = "^2.6.3"
+pyvista = "^0.32.1"
+ipyvtklink = "^0.2.1"
+pythreejs = "^2.3.0"
+ipygany = "^0.5.0"
+seaborn = "^0.11.2"
 
 [tool.poetry.dev-dependencies]
 
