--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ plotly = "^5.4.0"
 jupyterlab = "^3.2.4"
 ipywidgets = "^7.6.5"
 trimesh = "^3.9.36"
-neptune-client = "^0.13.4"
 matplotlib = "^3.5.0"
 Rtree = "^0.9.7"
 pyproj = "^3.3.0"
@@ -28,6 +27,8 @@ ipyvtklink = "^0.2.1"
 pythreejs = "^2.3.0"
 ipygany = "^0.5.0"
 seaborn = "^0.11.2"
+neptune-client = "^0.16.2"
+vedo = "^2022.2.3"
 
 [tool.poetry.dev-dependencies]
 
