--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ neptune-client = "^0.16.2"
 vedo = "^2022.2.3"
 pyoints = "^0.2.0a3"
 GDAL = "^3.5.3"
+rich = "^13.3.1"
 
 [tool.poetry.dev-dependencies]
 
